--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
   </style>
 </head>
 <body>
-<p class="p1"><span class="s1">&lt;html&gt;</span></p>
-<p class="p1"><span class="s1">&lt;body&gt;</span></p>
-<p class="p1"><span class="s1">&lt;h1&gt; GitHub Heading &lt;/h1&gt;</span></p>
+<p class="p1"><span class="s1">&lt;h1&gt; <b><i>GitHub Heading </i></b>&lt;/h1&gt;</span></p>
 <p class="p2"><span class="s1"></span><br></p>
-<p class="p1"><span class="s1">&lt;/body&gt;</span></p>
-<p class="p1"><span class="s1">&lt;/html&gt;</span></p>
 </body>
 </html>
